wk_taa_taaqa/src/objects/Monitoring_Log__c.object
<CustomObject>
    <description>This object is used to log informational and error messages - Currently for the Account Team Automation solution - ATA</description>
    <fields>
        <fullName>AccountID__c</fullName>
        <description>Displays the 18 digit ID in reporting</description>
        <formula>casesafeid(Account__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Monitoring Logs</relationshipLabel>
        <relationshipName>Monitoring_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apex_Job_ID__c</fullName>
        <description>Id of the batch job</description>
        <label>Apex Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>The class belong to exception.</description>
        <inlineHelpText>The class belong to exception.</inlineHelpText>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDateTime__c</fullName>
        <description>The formula is required to have the createdDate and time visible in reporting</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Custodial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custodial</label>
        <referenceTo>Custodial__c</referenceTo>
        <relationshipLabel>Monitoring Logs</relationshipLabel>
        <relationshipName>Monitoring_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <description>The detail of exception.</description>
        <inlineHelpText>The detail of exception.</inlineHelpText>
        <label>Status Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Monitoring Logs</relationshipLabel>
        <relationshipName>Monitoring_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <description>The method belong to exception.</description>
        <inlineHelpText>The method belong to exception.</inlineHelpText>
        <label>Apex Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record__c</fullName>
        <inlineHelpText>Record Name and id</inlineHelpText>
        <label>Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Batch Job Result</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Monitoring Log</label>
    <nameField>
        <label>Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monitoring Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>